--- a/frontend_clinica_odontologica/src/assets/css/style.css
+++ b/frontend_clinica_odontologica/src/assets/css/style.css
@@ -726,16 +726,28 @@ textarea {
   border: 1px solid #e7e7e7;
   -webkit-box-shadow: none;
   box-shadow: none;
-  color: #70768b;
+  color: #000000;
   border-radius: 0;
   background-color: transparent;
   margin-bottom: 0;
   padding: 0;
   width: 100%;
-  height: 50px;
-  font-size: 14px;
+  height: 60px;
+  font-size: 17px;
   font-weight: 300;
   outline: none;
+}
+
+/* colores notables */
+.p-inputtext {
+  color: white !important; 
+  -webkit-text-fill-color: white !important; 
+}
+
+/* colores notables */
+.p-password-input {
+  color: white !important; 
+  -webkit-text-fill-color: white !important;
 }
 
 textarea {
